--- a/Proyecto/css/lista-noticias.css
+++ b/Proyecto/css/lista-noticias.css
@@ -99,6 +99,17 @@ section div{
 .social-icon:hover{
 	opacity: 1;
 }
+.contenido{
+	display: inline-block;
+}
+.prev-noticia{
+	float: right;
+	width: 80px;
+	height: 80px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #025167;
+}
 ul.pagination {
     display: inline-block;
     padding: 0;
