--- a/Proyecto/css/login.css
+++ b/Proyecto/css/login.css
@@ -40,3 +40,15 @@ article section{
 	border-bottom: solid 2px #c9c9c9;
 	border-bottom: solid 2px #969696;
 }
+.lg-bt{
+	background-color: #e7e7e7;
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
