--- a/Proyecto/css/view-comment.css
+++ b/Proyecto/css/view-comment.css
@@ -7,4 +7,26 @@
 	padding-right: 62%;
 	border-color: #ddd;
 	color: gray;
+	margin-bottom: 22px;
+}
+.comment{
+	margin: 3%;
+	margin-top: 0;
+	padding-right: 8%;
+	
+}
+.comment a{
+	text-decoration: none;
+}
+.comment a:hover{
+	text-decoration: underline;	
+}
+.comment-body{
+	display: inline-block;
+	background-color: #FFF5ED;
+	font-size: 13px;
+}
+.num-comment{
+	color: #FF7D12;
+	font-weight: bold;
 }
