--- a/Proyecto/css/view-comment.css
+++ b/Proyecto/css/view-comment.css
@@ -11,6 +11,7 @@
 }
 .comment{
 	margin: 3%;
+	margin-bottom: 0;
 	margin-top: 0;
 	margin-right: 11%;
 }
@@ -50,4 +51,22 @@
 .comment .comment{
 	margin-left: 3%;
 	margin-top: 2%;
+}
+#box-comment{
+	background-color: #FFF5ED;
+	margin: 3%;
+	padding: 4%;
+	padding-top: 2%;
+	/* padding-bottom: 7px; */
+	border-style: solid;
+	border-width: 1px;
+	/* padding-right: 75%; */
+	border-color: #FF7D12;
+	color: gray;
+	margin-bottom: 5%;
+	margin-right: 10%;
+}
+fieldset legend{
+	color: #FF7D12;
+	font-weight: bold;
 }
