--- a/Proyecto/css/view-comment.css
+++ b/Proyecto/css/view-comment.css
@@ -57,6 +57,7 @@
 	margin: 3%;
 	padding: 4%;
 	padding-top: 2%;
+	padding-bottom: 2%;
 	/* padding-bottom: 7px; */
 	border-style: solid;
 	border-width: 1px;
@@ -65,6 +66,19 @@
 	color: gray;
 	margin-bottom: 5%;
 	margin-right: 10%;
+}
+#bt{
+	background-color: #FF7D12;
+	border: none;
+	col;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
 }
 fieldset legend{
 	color: #FF7D12;
