--- a/Proyecto/css/view-comment.css
+++ b/Proyecto/css/view-comment.css
@@ -13,7 +13,7 @@
 	margin: 3%;
 	margin-bottom: 0;
 	margin-top: 0;
-	margin-right: 11%;
+	margin-right: 0;
 }
 .comment a{
 	text-decoration: none;
@@ -85,5 +85,5 @@ fieldset legend{
 	font-weight: bold;
 }
 .comments-queue{
-	
+	margin-right: 11%;
 }
