--- a/Proyecto/css/ver-perfil.css
+++ b/Proyecto/css/ver-perfil.css
@@ -30,3 +30,17 @@ table{
 	border: none;
     font-weight: bold;
 }
+#modif-perfil{
+	float: right;
+}
+#modif-perfil input{
+	background-color: #e7e7e7;
+	border: none;
+	color: black;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 5px 13px;
+}
