first release, new delete modify news

--- a/Proyecto/css/base.css
+++ b/Proyecto/css/base.css
@@ -62,6 +62,7 @@ nav > ul > li > a {
 }
 nav > ul > li:hover > a {
     background-color:#216477;
+    color: white;
 }
 #categorias ul li:hover a, .rigth a:hover{
 	border-bottom-style: solid;
